<resources>
    <string name="app_name">X-Fit</string>
    <string name="auth_passwd_hint">Пароль</string>
    <string name="auth_passwd_rep_hint">Подтверждение пароля </string>
    <string name="auth_reset_pwd">Забыли пароль?</string>
    <string name="auth_registration">Зарегистрироваться</string>
    <string name="auth_login">войти</string>
    <string name="auth_phone_error">Неверно указан номер телефона</string>
    <string name="auth_pass_error">Указан неверный или недействительный \nпользователь и/или пароль</string>
    <string name="auth_internet_error">Проверьте подключение к интернету</string>

    <string name="reg_name">Фамилия Имя</string>
    <string name="reg_email">E-mail</string>
    <string name="reg_date_hint">ДДММГГГГ</string>
    <string name="reg_date_birth">Дата рождения</string>
    <string name="reg_gender">Пол</string>
    <string name="reg_registration">Зарегистрироваться</string>
    <string name="sms_confirm_title">Код активации из SMS</string>
    <string name="sms_confirm_btn">Активировать</string>
    <string name="sms_wrong_code">Неверный код активации</string>

    <string name="password_not_equal">Пароль не совпал</string>
    <string name="empty_field_error">Поле должно быть заполненным</string>
    <string name="incorrect_email">Проверьте правильность вашего адреса</string>
    <string name="incorrect_password">Пароль должен содержать не менее 8 символов и включать буквы верхнего и нижнего регистров, цифры, спецсимволы.</string>
    <string name="easy_password">Слишком простой пароль</string>
    <string name="short_name">Фамилия и имя слишком короткие</string>
    <string name="long_name">Фамилия и имя слишком длинные</string>
    <string name="incorrect_name">Недопустимые символы в фамилии или имени</string>
    <string name="incorrect_date">Неверная дата</string>
    <string name="registered_number">Телефонный номер уже используется</string>
    <string name="code_request_error">SMS с кодом подтверждения было запрошено слишком часто</string>

    <string name="nav_menu_schedule">Моё расписание</string>
    <string name="nav_menu_x_fit">Мой X-Fit</string>
    <string name="nav_menu_services">Услуги</string>
    <string name="nav_menu_clubs">Клубы</string>
    <string name="nav_menu_notifications">Уведомления</string>
    <string name="nav_menu_contacts">Контакты</string>
    <string name="nav_menu_settings">Настройки</string>
    <string name="nav_menu_quit"><font fgcolor='#9b65cb'>Выйти</font></string>

    <string name="navigation_drawer_open">Open drawer</string>
    <string name="navigation_drawer_close">Close drawer</string>

    <string name="my_schedule_title">Мое расписание</string>
    <string name="my_schedule_no_schedule">На эту дату у вас ничего не запланировано</string>
    <string name="my_schedule_classes">Занятия</string>
    <string name="my_schedule_services">Услуги</string>

    <string name="classes_subscribe">Добавить в расписание</string>
    <string name="classes_unsubscribe">Удалить из расписания</string>
    <string name="classes_not_found">По данному запросу, ничего не найдено</string>

    <string name="clubs_title">Клубы</string>
    <string name="filter_by_classes">По занятиям</string>
    <string name="filter_by_trainers">По тренерам</string>
    <string name="filter_by_all">Все</string>
    <string name="filter_by_morning">Утро</string>
    <string name="filter_by_day">День</string>
    <string name="filter_by_evening">Вечер</string>
    <string name="filter_accept">Применить</string>

    <string name="validation_incorrect_number">Неверный номер телефона</string>
    <string name="validation_incorrect_date">Неверная дата рождения</string>

    <string name="clubs_no_clubs">Ничего не найдено, повторите запрос позже</string>
    <string name="clubs_controller_title">Клубы</string>
    <string name="clubs_guest">Заказать гостевой визит</string>
    <string name="clubs_buy_card">Купить карту</string>
    <string name="clubs_rote">Проложить маршрут</string>
    <string name="clubs_schedule">Расписание занятий</string>
    <string name="clubs_trainers">Фитнес тренеры</string>
    <string name="clubs_news">Новости</string>
    <string name="clubs_my_club">Мой клуб</string>
    <string name="clubs_suspend_card">Заморозить карту</string>

    <string name="trainers_fitness_trainers">Фитнес-тренеры</string>

    <string name="suspend_card_title">Заморозка карты</string>
    <string name="suspend_card_btn">Заморозить карту</string>
    <string name="suspend_card_hint">Выберите дату начала \nи дату завершения заморозки карты</string>

    <string name="dialog_suspend_card">Заморозить</string>
    <string name="dialog_suspend_card_message">Заморозить \nкарту с %1$s по %2$s?</string>
    <string name="dialog_suspend_card_success">Ваша карта успешно \nзаморожена до %1$s</string>
    <string name="dialog_suspend_card_not_allow">Ваша карта не поддерживает \nопцию заморозки</string>
    <string name="dialog_suspend_card_not_found">Контракт не найден</string>
    <string name="dialog_cancell">Отмена</string>
    <string name="dialog_ok">Ок</string>
    <string name="dialog_buy_card">Купить карту</string>
    <string name="dialog_phone_not_found">Ваш номер телефона не найден в данном клубе</string>

    <string name="my_xfit_contract_duration">Действует до %1$s года</string>
    <string name="my_xfit_my_params">Мои достижения</string>
    <string name="my_xfit_title">Мой X-Fit</string>
    <string name="my_xfit_add_club">Добавить клуб</string>
    <string name="my_xfit_suspend_contract">Заморозить карту</string>
    <string name="my_xfit_error">Пожалуйста повторите запрос позже</string>
    <string name="my_xfit_not_found">С Вашим номером телефона нет связанных \nклубов, если Вы уже приобрели карту, нажмите\n «Добавить клуб»</string>

    <string name="contract_opened">Открыта</string>
    <string name="contract_closed">Закрыта</string>
    <string name="contract_not_opened">Не открыта</string>
    <string name="contract_blocked">Заблокирована</string>
    <string name="contract_suspended">Заморожена</string>

    <string name="contacts_title">Контакты</string>
    <string name="contacts_get_call">Перезвоните мне</string>
    <string name="contacts_feedback">Обратная связь</string>
    <string name="contacts_faq">FAQ</string>
    <string name="contacts_tt_link">https://twitter.com/XfitOfficial</string>
    <string name="contacts_fb_link">https://www.facebook.com/xfitofficial</string>
    <string name="contacts_in_link">http://instagram.com/xfitofficial</string>
    <string name="contacts_fs_link">https://ru.foursquare.com/xfitofficial</string>
    <string name="contacts_vk_link">http://vkontakte.ru/xfitoficial</string>
    <string name="contacts_yt_link">https://www.youtube.com/user/XFitRussia</string>
    <string name="contacts_ok_link">http://odnoklassniki.ru/xfitclubs</string>
    <string name="contacts_gp_link">https://plus.google.com/113901357048425027175/posts</string>

    <string name="call_me_title">Перезвоните мне</string>
    <string name="call_me_button">Жду звонка</string>
    <string name="call_me_select_club">Выберите клуб</string>
    <string name="call_me_success">Ваше обращение принято</string>
    <string name="call_me_message_caption">Сообщение</string>

    <string name="faq_general">Общие вопросы</string>
    <string name="faq_trainings">Вопросы по тренировкам</string>
    <string name="faq_cards">Вопросы по абонементам</string>
    <string name="faq_pools">Вопросы по бассейну</string>
    <string name="faq_ask">Задать вопрос</string>
    <string name="faq_telegram">telegram.me/XFitBot</string>

    <string name="send_feedback_title">Обратная связь</string>
    <string name="send_feedback_send_feedback">Отправить</string>

    <string name="settings_title">Настройки</string>
    <string name="settings_notification">Уведомления</string>
    <string name="settings_alarm">Напоминание</string>
    <string name="settings_alarm_time">Время напоминания</string>
    <string name="settings_rate">Оцените приложение</string>
    <string name="settings_about">О приложении</string>
    <string name="settings_menu_zero">В день</string>
    <string name="settings_menu_one">За 1 день</string>
    <plurals name="settings_notify_day">
        <item quantity="one">За %d день</item>
        <item quantity="zero">В день</item>
        <item quantity="few">За %d дня</item>
        <item quantity="many">В день</item>
        <item quantity="other">В день</item>
    </plurals>

    <string name="about_title">О приложении</string>
    <string name="about_developer">Разработчик приложения: \nООО «Айди ИСТ» (iD EAST)</string>
    <string name="about_web">Web: <u>www.id-east.ru</u></string>
    <string name="about_web_link">https://id-east.ru</string>
    <string name="about_email">E-mail: <u>welcome@id-east.ru</u></string>
    <string name="about_email_link">mailto: welcome@id-east.ru</string>
    <string name="about_email_title">iD EAST</string>
    <string name="about_phone">Телефон: <u>+7 (495) 795–67–78</u></string>
    <string name="about_phone_link">+7(495)795–67–78</string>

    <string name="notifications_title">Уведомления</string>

    <string name="club_news_empty">Нет новостей</string>
    <string name="club_order_guest_visit">Заказать гостевой визит</string>

    <string name="achievements_title">Мои достижения</string>
    <string name="achievements_impulse_title">ИМТ</string>
    <string name="achievements_diary_title">Дневник</string>
    <string name="achievements_dynamics_title">Динамика</string>

    <string name="diary_today">Сегодня</string>
    <string name="diary_mass">кг</string>
    <string name="diary_not_filled">Не указано</string>

</resources>
