<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="controller"
            type="ru.xfit.screens.settings.AboutController" />

        <import
            alias="type"
            type="ru.xfit.screens.settings.ContactsEnum" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="116dp"
            android:background="@drawable/id_east_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/about_developer"
            android:textColor="@color/calendarCommonDay"
            android:textSize="15sp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-medium"
            android:onClick="@{() -> controller.getFeedback(type.WEB)}"
            android:text="@string/about_web"
            android:textColor="@color/calendarCommonDay"
            android:textSize="15sp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-medium"
            android:onClick="@{() -> controller.getFeedback(type.EMAIL)}"
            android:text="@string/about_email"
            android:textColor="@color/calendarCommonDay"
            android:textSize="15sp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-medium"
            android:onClick="@{() -> controller.getFeedback(type.PHONE)}"
            android:text="@string/about_phone"
            android:textColor="@color/calendarCommonDay"
            android:textSize="15sp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-medium"
            android:text="@{controller.getBuild}"
            android:textColor="@color/calendarCommonDay"
            android:textSize="15sp"
            android:textStyle="normal" />

    </LinearLayout>
</layout>