<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="controller"
            type="ru.xfit.screens.settings.SettingsController" />

        <import type="ru.xfit.R" />

        <import type="ru.xfit.misc.LayoutManagers" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grayBackground"
        android:orientation="vertical">

        <View
            android:id="@+id/spacer"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize" />
        
        <RelativeLayout
            style="@style/SettingsRl"
            android:id="@+id/notification_rl">
            <TextView
                style="@style/SettingsCaption"
                android:text="@string/settings_notification"
                />
            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:checked="@{controller.isNotify}"
                android:layout_centerVertical="true"/>
        </RelativeLayout>

        <RelativeLayout
            style="@style/SettingsRl"
            android:id="@+id/alarm_rl"
            android:layout_marginTop="1dp">
            <TextView
                style="@style/SettingsCaption"
                android:text="@string/settings_alarm"
                />
            <TextView
                style="@style/SettingsCaption"
                android:textColor="#4b0887"
                android:layout_alignParentRight="true"
                android:drawablePadding="10dp"
                android:drawableRight="@drawable/ic_expand_more"
                android:onClick="@{controller.onSetDay}"
                android:text="@{controller.dayNotify}"
                />
        </RelativeLayout>

        <RelativeLayout
            style="@style/SettingsRl"
            android:id="@+id/alarm_time_rl"
            android:layout_marginTop="1dp"
            android:onClick="@{controller.onSetTimeClick}">>
            <TextView
                style="@style/SettingsCaption"
                android:text="@string/settings_alarm_time"
                />
            <TextView
                style="@style/SettingsCaption"
                android:textColor="#4b0887"
                android:layout_alignParentRight="true"
                android:drawablePadding="10dp"
                android:drawableRight="@drawable/ic_keyboard_arrow_right"
                android:text="@{controller.timeNotify}"
                />
        </RelativeLayout>

        <RelativeLayout
            style="@style/SettingsRl"
            android:id="@+id/please_rate_rl"
            android:layout_marginTop="30dp"
            android:onClick="@{controller.onRateClick}">>
            <TextView
                style="@style/SettingsCaption"
                android:text="@string/settings_rate"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:drawablePadding="10dp"
                android:background="@drawable/ic_keyboard_arrow_right"
                />
        </RelativeLayout>

        <RelativeLayout
            style="@style/SettingsRl"
            android:id="@+id/about_rl"
            android:layout_marginTop="1dp"
            android:onClick="@{controller.onAboutClick}">
            <TextView
                style="@style/SettingsCaption"
                android:text="@string/settings_about"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:drawablePadding="10dp"
                android:background="@drawable/ic_keyboard_arrow_right"
                />
        </RelativeLayout>

    </LinearLayout>
</layout>